--- a/栅格布局系统/demo.html
+++ b/栅格布局系统/demo.html
@@ -39,8 +39,8 @@
 	      </pre>
 	    </div>
 	  </div>
-	<div class="container clearfix">
-	  <div class="row show-grid  clearfix">
+	<div class="container">
+	  <div class="row show-grid">
 		  <div class="col-md-1">.col-md-1</div>
 		  <div class="col-md-1">.col-md-1</div>
 		  <div class="col-md-1">.col-md-1</div>
@@ -54,23 +54,23 @@
 		  <div class="col-md-1">.col-md-1</div>
 		  <div class="col-md-1">.col-md-1</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-8">.col-md-8</div>
 		  <div class="col-md-4">.col-md-4</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-4">.col-md-4</div>
 		  <div class="col-md-4">.col-md-4</div>
 		  <div class="col-md-4">.col-md-4</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-6">.col-md-6</div>
 		  <div class="col-md-6">.col-md-6</div>
 		</div>
 
 
 
-		<div class="row show-grid  clearfix">
+		<div class="row show-grid">
 		  <div class="col-lg-1">.col-lg-1</div>
 		  <div class="col-lg-1">.col-md-1</div>
 		  <div class="col-lg-1">.col-md-1</div>
@@ -84,16 +84,16 @@
 		  <div class="col-lg-1">.col-md-1</div>
 		  <div class="col-lg-1">.col-md-1</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-8">.col-md-8</div>
 		  <div class="col-md-4">.col-md-4</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-4">.col-md-4</div>
 		  <div class="col-md-4">.col-md-4</div>
 		  <div class="col-md-4">.col-md-4</div>
 		</div>
-		<div class="row  show-grid clearfix">
+		<div class="row  show-grid">
 		  <div class="col-md-6">.col-md-6</div>
 		  <div class="col-md-6">.col-md-6</div>
 		</div>
@@ -158,6 +158,20 @@
 		</div>
 		
 	</div>
+
+	<div><h1>仅仅只是宽度值，不布局</h1></div>
+	  <div class="col-width-1">1/12宽</div>
+	  <div class="col-width-2">1/6宽</div>
+	  <div class="col-width-3">1/4宽</div>
+	  <div class="col-width-4">1/3宽</div>
+	  <div class="col-width-5">5/12宽</div>
+	  <div class="col-width-6">1/2宽</div>
+	  <div class="col-width-7">7/12宽</div>
+	  <div class="col-width-8">2/3宽</div>
+	  <div class="col-width-9">3/4宽</div>
+	  <div class="col-width-10">5/6宽</div>
+	  <div class="col-width-11">11/12宽</div>
+	  <div class="col-width-12">全宽</div>
 
 
 
